# whixp

./: .gitignore  .markdownlint.json  .pubignore  CHANGELOG.md  LICENSE  Makefile  NATIVE_BINARIES_PER_PLATFORM.md  README.md  analysis_options.yaml  dart_test.yaml  dartdoc_options.yaml  doap.xml  flutter.yaml  pubspec.yaml
.github/workflows/: dart.yml  native.yml
android/: build.gradle  settings.gradle
docs/: TLS_CONFIGURATION.md
ejabberd/: ejabberd.bat
ejabberd/conf/: ejabberd.yml  key.pem  localhost.pem  root.pem
example/: README_CLI.md  cli_messenger.dart  command.dart  command_user.dart  component.dart  csi.dart  echo_example.dart  inbox.dart  main.dart  mam.dart  message.dart  messaging.dart  messaging_second.dart  misc.dart  ping.dart  pubsub.dart  register.dart  sm.dart  vcard.dart
extensions/: extension.dart  http_lookup.dart
extensions/event/: eventius.dart
extensions/rce/: remote_connection_endpoint.dart  remote_connection_exception.dart  single_address_remote_connection_endpoint.dart
extensions/v-card/: vcard.dart  vcard_extension.dart
ios/: whixp.podspec  whixp_transport.podspec
ios/Classes/: WhixpTransportPlugin.swift
lib/: echo.dart  echox.dart  whixp.dart  whixp_native.dart
lib/extensions/: extensions.dart
lib/src/: _extension.dart  _extensions.dart  _static.dart  bosh.dart  builder.dart  client.dart  component.dart  connection.dart  constants.dart  echo.dart  echox.dart  enums.dart  exception.dart  extension.dart  handler.dart  log.dart  mishaps.dart  parser.dart  (+19 more)
native/: README.md
native/whixp_transport/: .gitignore  Cargo.toml
native/whixp_transport/src/: config.rs  connection.rs  dns.rs  handshake.rs  lib.rs  retry.rs  stanza.rs  tls.rs  websocket.rs
test/: base_test.dart  batcher_test.dart  bind_test.dart  builder_test.dart  command_test.dart  dataforms_test.dart  disco_test.dart  echo_test.dart  echotils_test.dart  error_test.dart  escaper_test.dart  eventius_test.dart  handler_test.dart  idna_test.dart  iq_test.dart  jid_test.dart  message_test.dart  presence_test.dart  pubsub_test.dart  rate_limiter_test.dart  roster_test.dart  rsm_test.dart  scram_test.dart  sm_test.dart  stanza_test.dart  stringprep_test.dart  test.dart  test_base.dart  time_test.dart  tostring_test.dart  transport_test.dart  utils_test.dart
xml/: _extensions.dart  _model.dart  _registrator.dart  _registry.dart  _static.dart  base.dart  stanza.dart
(+184 files in other folders)
