[package]
name = "whixp_transport"
version = "0.1.0"
edition = "2021"
description = "Rust transport and stanza layer for Whixp XMPP client"

[features]
default = ["doh"]
# DoH fallback when system DNS fails. Disable for smaller binary: --no-default-features
doh = ["ureq"]

[lib]
crate-type = ["cdylib", "staticlib"]

# Smaller release binaries for package distribution.
# If you see 30+ MB you are likely building debug (use: cargo build --release).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false

[dependencies]
# Single-threaded runtime is enough for DNS block_on and keeps binary smaller than rt-multi-thread.
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2"
tracing = "0.1"
trust-dns-resolver = { version = "0.23", features = ["system-config"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
http = "1"
